Fix css bug regarding min-max height on mobile devices

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -174,7 +174,7 @@
 
  }
 
- @media (max-width: 500px) and (max-height: 800px) {
+ @media (max-width: 500px) and (max-height: 801px) {
 
      section {
          height: auto;
