--- a/css/style-section2.css
+++ b/css/style-section2.css
@@ -366,7 +366,7 @@
 }
 
 /* Small phone display */
-@media (max-width: 500px) and (max-height: 800px) {
+@media (max-width: 500px) and (max-height: 801px) {
 
   .spotlight .feature {
     padding: 0.5rem;
