--- a/css/style-section4.css
+++ b/css/style-section4.css
@@ -211,7 +211,7 @@
 
 }
 
-@media (max-width: 500px)  and (max-height: 800px){
+@media (max-width: 500px)  and (max-height: 801px){
 
   .copy-container {
     height: calc(100% - 4rem);
