--- a/css/style-section5.css
+++ b/css/style-section5.css
@@ -110,7 +110,7 @@
     
 }
 
-@media (max-width: 500px) and (max-height: 800px) {
+@media (max-width: 500px) and (max-height: 801px) {
     
     .outro {
         align-items: flex-start;
